[gd_scene load_steps=8 format=3 uid="uid://cmvabdt81lslk"]

[ext_resource type="Script" path="res://newtrystaff/rooms/middle_window/win_window.gd" id="1_34omd"]
[ext_resource type="Texture2D" uid="uid://b8gquf5c84a5l" path="res://newtrystaff/every/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/Prefabs/3.png" id="1_v72ec"]
[ext_resource type="FontFile" uid="uid://qel5im2487lr" path="res://newtrystaff/fonts/zx_spectrum-7_bold.ttf" id="2_hup3m"]
[ext_resource type="Script" path="res://newtrystaff/rooms/middle_window/gems.gd" id="2_iuxo8"]
[ext_resource type="Texture2D" uid="uid://diwpiitcgjjkc" path="res://newtrystaff/collect/empty_gem.png" id="2_y0lsh"]
[ext_resource type="Texture2D" uid="uid://b3iwbt4h8g4wx" path="res://newtrystaff/collect/blue gem big.png" id="3_o6qxu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b47ly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y0lsh")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_o6qxu")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[node name="win_window" type="Node2D"]
process_mode = 2
script = ExtResource("1_34omd")

[node name="gems" type="Node2D" parent="."]
z_index = 1
script = ExtResource("2_iuxo8")

[node name="1" type="AnimatedSprite2D" parent="gems"]
position = Vector2(-19, 0)
sprite_frames = SubResource("SpriteFrames_b47ly")
animation = &"on"

[node name="2" type="AnimatedSprite2D" parent="gems"]
sprite_frames = SubResource("SpriteFrames_b47ly")
animation = &"on"

[node name="3" type="AnimatedSprite2D" parent="gems"]
position = Vector2(19, 0)
sprite_frames = SubResource("SpriteFrames_b47ly")
animation = &"on"

[node name="board" type="Sprite2D" parent="."]
position = Vector2(3, 10)
texture = ExtResource("1_v72ec")

[node name="next" type="Button" parent="."]
offset_left = -39.0
offset_top = 13.0
offset_right = 49.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hup3m")
theme_override_font_sizes/font_size = 10
text = "Продолжить"
flat = true

[node name="main_menu" type="Button" parent="."]
offset_left = -25.0
offset_top = 32.0
offset_right = 31.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_hup3m")
theme_override_font_sizes/font_size = 10
text = "В меню"
flat = true

[node name="Label" type="Label" parent="."]
offset_left = -46.0
offset_top = -31.0
offset_right = 66.0
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("2_hup3m")
theme_override_font_sizes/font_size = 20
text = "ПОБЕДА"

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
